updated opponent jump

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
             <h2 class="start" id="start">press Any Key to Start</h2>
             <img src="/public/ground.png" class="ground" alt="">
             <img src="/public/ground.png" class="ground" alt="">
-            <img src="/public/catrun0-removebg-preview.png" class="opponent hide" id="opp1" alt="">
-            <img src="/public/catrun1-removebg-preview.png" class="opponent hide" id="opp2" alt="">
-            <img src="/public/catrun2-removebg-preview.png" class="opponent hide" id="opp3" alt="">
+            <img src="/public/catrun0-removebg-preview.png" class="opponent" id="opponent" alt="">
+           
         </div>
     </main>
     <script defer src="script.mjs" type="module"></script>
